--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,29 +19,18 @@
     <string name="chip_not_found">Sorry, current used gsensor is not provided by MiraMEMS, the calibraste function will be disabled!</string>
     <!-- gsensor -->
     <string name="hello">欢迎来到工厂模式</string>
-
-    <string name="touch_head_left">头部左</string>
-    <string name="touch_head_right">头部右</string>
-    <string name="touch_ear_left">头部左耳</string>
-    <string name="touch_ear_right">头部右耳</string>
-    <string name="touch_head_back">头部后脑</string>
-    <string name="touch_shoulder_left">左肩触摸</string>
-    <string name="touch_shoulder_right">右肩触摸</string>
-    <string name="touch_arm_left">左臂触摸</string>
-    <string name="touch_arm_right">右臂触摸</string>
-    <string name="touch_head_chin">下巴触摸</string>
-    <string name="touch_body_back">后背触摸</string>
-    <string name="touch_chest">胸前触摸</string>
-    <string name="touch_body_infrared">人体感应</string>
-    <string name="descriton_touch">1.点击开启触摸测试\n2.分别触摸机器人头部,脖子(屏幕下方),左肩,右肩触发触摸感应\n3.在机器人头顶上的黑色圆圈前进行人体晃动，触发人体感应\n4.成功后对应方框会由红色显示为绿色且tips会有相应提示</string>
-
+    <string name="touch_head">头部触摸</string>
+    <string name="touch_back">脖子触摸</string>
+    <string name="touch_left">左肩触摸</string>
+    <string name="touch_right">右肩触摸</string>
     <string name="touch_middle">人体感应</string>
     <string name="start_dialog">开始测试手机信号</string>
     <string name="touch">感应测试</string>
     <string name="gsensor">重力感应校准</string>
+    <string name="descriton_touch">1.点击开启触摸测试\n2.分别触摸机器人头部,脖子(屏幕下方),左肩,右肩触发触摸感应\n3.在机器人屏幕下方的的圆口前进行人体晃动，触发人体感应\n4.成功后对应方框会由红色显示为绿色且tips会有相应提示</string>
     <string name="start_touch">开启触摸测试</string>
     <string name="stop_touch">停止触摸测试</string>
-    <string name="desription_infrared">1.点击发送红外测试\n2.打开手机摄像头对准机器人头部圆圈部分\n3.观察手机屏幕中是否有八个指示灯亮起\n4.若亮起,则测试成功</string>
+    <string name="desription_infrared">1.点击发送红外测试\n2.打开手机摄像头对准机器人头部圆圈部分\n3.观察手机屏幕中是否有九个指示灯亮起\n4.若亮起,则测试成功</string>
     <string name="infrared">红外测试</string>
     <string name="send_infrared">发送红外信号</string>
     <string name="stop_infrared">停止发送红外</string>
@@ -428,33 +417,32 @@
     <string name="write_sn_fail">写入SN失败</string>
 	<!-- add sunyibin start -->
     <string name="five_mic">5MIC测试</string>
-	<string name="otg">OTG测试</string>
-	<string name="OTG_textView">插入OTG线外接U盘后，观察是否读取到U盘的存储空间信息</string>
-	<string name="motor_stop">停止</string>
-	<string name="motor_forward">前进</string>
+    <string name="mic5_txt">四个不同方向唤醒,成功则变绿,复位可再次检测</string>
+		<string name="angle_txt">唤醒角度:</string>
+    <string name="angle">0</string>
+    <string name="back_txt">后mic</string>
+    <string name="forward_txt">前mic</string>
+    <string name="left_txt">左mic</string>
+    <string name="right_txt">右mic</string>
+    <string name="mid_txt">中mic</string>
+    <string name="mic5_reset">复位</string>
+		<string name="otg">OTG测试</string>
+		<string name="OTG_textView">插入OTG线外接U盘后，观察是否读取到U盘的存储空间信息</string>
+		<string name="motor_stop">停止</string>
+		<string name="motor_forward">前进</string>
     <string name="motor_back">后退</string>
     <string name="motor_left">原地左转</string>
     <string name="motor_right">原地右转</string>
-	<string name="motor_turn_left">向左转</string>
+		<string name="motor_turn_left">向左转</string>
     <string name="motor_turn_right">向右转</string>
-	<string name="head_up">头向上</string>
+		<string name="head_up">头向上</string>
     <string name="head_down">头向下</string>
     <string name="head_left">头向左</string>
     <string name="head_right">头向右</string>
-    <string name="head_mid">头到中间</string>
+    <string name="head_mid">转动头到中间</string>
     <string name="head_shake">左右摇头</string>
-	<string name="head_up_down">上下点头</string>
-    <string name="head_stop">停止头部动作</string>
-	<string name="urgency_button_test">急停按钮测试</string>
-    <string name="description_switch">1,点击开始测试后，机器人自动原地旋转\n2,按机器人身后的红色紧急停止按钮，判断机器人是否停止转动</string>
-    <string name="urgency_start">开始测试</string>
-	<string name="signal_lamp_test">信号灯测试</string>
-    <string name="lamp_ear_open">打开两耳灯</string>
-    <string name="lamp_ear_close">关闭两耳灯</string>
-    <string name="lamp_arm_open">打开双臂灯</string>
-    <string name="lamp_arm_close">关闭双臂灯</string>
-    <string name="lamp_chest_open">打开胸前灯</string>
-    <string name="lamp_chest_close">关闭胸前灯</string>
+    <string name="head_stop">停止摇头</string>
+    <string name="dance">跳舞</string>
     <!--add sunyibin end-->
 
 </resources>
